# rust_aws_lambda

./: Cargo.toml  README.md
src/: Untitled-1.html  main.rs  s3.rs
