[package]
name = "learn_lambda"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
aws_lambda_events = { version = "0.12.1", default-features = false, features = ["s3", "cloudwatch_events"] }
aws-smithy-http = "0.60.0"
lambda_runtime = "0.8.3"
aws-sdk-s3 = "0.38.0"
aws-sdk-dynamodb = "0.38.0"
async-trait = "0.1.68"
aws-config = { version =  "0.101.0", features = ["behavior-version-latest"] }
tokio = { version = "1.34.0", features = ["macros"] }
thumbnailer = "0.5.1"
mime = "0.3.16"
lettre = { version = "0.11.1", default-features = false, features = ["smtp-transport", "pool", "rustls-tls", "hostname", "builder"] }
lazy_static = "1.4.0"
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
